Doc/force-app/main/default/objects/QtC_Mig_Invoice_Lines_Temp_Table__c/fields/Item_Rate_Amount_without_Symbol__c.field-meta.xml
<CustomField>
    <fullName>Item_Rate_Amount_without_Symbol__c</fullName>
    <label>Item Rate Amount without Symbol</label>
    <length>255</length>
    <type>Text</type>
</CustomField>