Doc/force-app/main/default/objects/QtC_Mig_Invoice_Lines_Temp_Table__c/fields/of_Months__c.field-meta.xml
<CustomField>
    <fullName>of_Months__c</fullName>
    <label># of Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>