Doc/force-app/main/default/objects/QtC_Mig_Invoice_Lines_Temp_Table__c/fields/Order_Product__c.field-meta.xml
<CustomField>
    <fullName>Order_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Product</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>QtC Mig Invoice Lines Temp Table</relationshipLabel>
    <relationshipName>QtC_Mig_Invoice_Lines_Temp_Table</relationshipName>
    <type>Lookup</type>
</CustomField>