Doc/force-app/main/default/objects/QtC_Mig_Invoice_Lines_Temp_Table__c/fields/Rev_Rec_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Rev_Rec_End_Date__c</fullName>
    <label>Rev. Rec. End Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>