Doc/force-app/main/default/objects/QtC_Mig_Invoice_Lines_Temp_Table__c/fields/Sales_Order_Line_Id__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_Line_Id__c</fullName>
    <label>Sales Order Line Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>