Doc/force-app/main/default/objects/QtC_Mig_Invoice_Lines_Temp_Table__c/fields/T_Order__c.field-meta.xml
<CustomField>
    <fullName>T_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>T_Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>QtC Mig Invoice Lines Temp Table</relationshipLabel>
    <relationshipName>QtC_Mig_Invoice_Lines_Temp_Table</relationshipName>
    <type>Lookup</type>
</CustomField>