Doc/force-app/main/default/objects/QtC_Mig_Invoice_Lines_Temp_Table__c/fields/T_SourceName__c.field-meta.xml
<CustomField>
    <fullName>T_SourceName__c</fullName>
    <label>T_SourceName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>